@@ -10,5 +10,7 @@ public class PreferenceConstants {
 	public static final String P_PASSWORD = "password";
 	public static final String P_USEPASSWORD = "usepassword";
 	public static final String P_KEEP_COUNT = "keepcount";
+	public static final String P_START_ON_STARTUP = "startonstartup";
+	
 	
 }
